--- a/dummy/pom.xml
+++ b/dummy/pom.xml
@@ -15,6 +15,8 @@
 
 		<app.runtime>4.4.0-20230111</app.runtime>
 		<mule.maven.plugin.version>3.8.0</mule.maven.plugin.version>
+		<sonar.sources>src/main/mule</sonar.sources>
+		<sonar.tests/>
 	</properties>
 
 	<build>
@@ -45,6 +47,11 @@
 			<artifactId>mule-sockets-connector</artifactId>
 			<version>1.2.3</version>
 			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.sonarsource.scanner.maven</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>3.6.1.1688</version>
 		</dependency>
 	</dependencies>
 
